--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space X Clone</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-    <!-- Navigation Below Here -->
 
+<body>
+    <div class="box1">   
+        <nav>
+            <h1>SPACEX</h1> 
+                <div class="flex-container">
+                    <div class="FALCON 9">FALCON 9</div>
+                    <div class="FALCON HEAVY">FALCON HEAVY</div>
+                    <div class="DRAGON">DRAGON</div>
+                    <div class="STARSHIP">STARSHIP</div>
+                    <div class="HUMAN SPACEFLIGHT">HUMAN SPACEFLIGHT</div>
+                    <div class="RIDESHARE">RIDESHARE</div>
+                </div>
+        </nav>
+    </div> 
+    
     <!-- Main Below Here (image 1) -->
 
     <!-- Main Below Here (image 2) -->
@@ -27,3 +40,4 @@
     
 </body>
 </html>
+
