changed text in row6 of index and css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </div>
 
     <div class="row6">
-        <h2>STARSHIP TO LAND NASA ASTRONAUTS ON THE MOON</h2>
+        <h2>STARSHIP TO LAND <br>
+            NASA ASTRONAUTS ON <br> 
+            THE MOON</h2>
         <button>Learn more</button>
     </div>
     <!-- Footer Below Here -->
