fix text in index and css

--- a/index.html
+++ b/index.html
@@ -56,14 +56,17 @@
 
     <!-- Main Below Here (image 2) -->
     <div class="row2">
-      <h2>STARLINK MISSION</h2>
-      <button>Learn more</button>
+      <div class="text-container">
+        <h2>STARLINK MISSION</h2>
+        <button>Learn more</button>
+      </div>
   </div>
 
     <!-- Main Below Here (image 3) -->
     <div class="row3">
-      <h2>STARLINK MISSION</h2>
-      <button>Learn more</button>
+      <div class="text-container">
+        <h2>STARLINK MISSION</h2>
+        <button>Learn more</button>
       </div>
   </div>
 
@@ -71,23 +74,28 @@
 
     <div class="row4">
       <div class="text-container">
-        <h3>RECENT LAUNCH</h3>
-         <h1> NROL-87 MISSION></h1>
-        </h2>
-        <button>Learn more</button>
+        <h2>RECENT LAUNCH <br> 
+          NROL-87 MISSION</h2>
+       <button>Learn more</button>
       </div>
     </div>
         
     <div class="row5">
-        <h2>COSM0-SKYMED SECOND GENERATION FM2 MISSION</h2>
+      <div class="text-container">
+        <h2>COSM0-SKYMED <br>
+           second generation<br> 
+           FM2 MISSION</h2>
         <button>Learn more</button>
+      </div>
     </div>
 
     <div class="row6">
+      <div class="text-container">
         <h2>STARSHIP TO LAND <br>
             NASA ASTRONAUTS ON <br> 
             THE MOON</h2>
         <button>Learn more</button>
+      </div>
     </div>
     <!-- Footer Below Here -->
    
