added updated files and pull

--- a/index.html
+++ b/index.html
@@ -48,22 +48,34 @@
                 <li class="HUMAN SPACEFLIGHT">HUMAN SPACEFLIGHT</li>
                 <li class="RIDESHARE">RIDESHARE</li>
                 <li class="SHOP">SHOP</li>
-                <button id="hamburger"></button>
-            </ul> 
+                <div class="H"></div>
+                <div class="H"></div>
+                <div class="H"></div>
+            </ul>
         </nav>
+        <div class="text-container">
+          <h2>UPCOMING LAUNCH</h2>
+          <h1>STARKLINK MISSION</h1>
+          <button class="button">WATCH</button>
+        </div>
     </div>
     <!-- Main Below Here (image 1) --> 
 
     <!-- Main Below Here (image 2) -->
     <div class="row2">
-      <h2>STARLINK MISSION</h2>
-      <button>Learn more</button>
+      <div class="text-container">
+      <h2>UPCOMING LAUNCH</h2>
+      <h1>STARKLINK MISSION</h1>
+      <button class="button">WATCH</button>
+      </div>
   </div>
 
     <!-- Main Below Here (image 3) -->
     <div class="row3">
-      <h2>STARLINK MISSION</h2>
-      <button>Learn more</button>
+      <div class="text-container">
+        <h2>UPCOMING LAUNCH</h2>
+        <h1>STARKLINK MISSION</h1>
+        <button class="button">WATCH</button>
       </div>
   </div>
 
