push at end of day with footer changes

--- a/index.html
+++ b/index.html
@@ -83,27 +83,25 @@
 
     <div class="row4">
       <div class="text-container">
-        <h2>RECENT LAUNCH <br> 
-          NROL-87 MISSION</h2>
-       <button>Learn more</button>
+        <h2>RECENT LAUNCH </h2>
+          <h1>NROL-87 MISSION</h1>
+       <button class="button">Learn more</button>
       </div>
     </div>
         
     <div class="row5">
       <div class="text-container">
-        <h2>COSM0-SKYMED <br>
-           second generation<br> 
-           FM2 MISSION</h2>
-        <button>Learn more</button>
+        <h2>COSM0-SKYMED </h2>
+        <h1>second generation FM2 MISSION</h1>
+        <button class="button">Learn more</button>
       </div>
     </div>
 
     <div class="row6">
       <div class="text-container">
-        <h2>STARSHIP TO LAND <br>
-            NASA ASTRONAUTS ON <br> 
-            THE MOON</h2>
-        <button>Learn more</button>
+        <h2>STARSHIP TO LAND </h2>
+            <h1>NASA ASTRONAUTS ON THE MOON</h1>
+        <button class="button">Learn more</button>
       </div>
     </div>
     <!-- Footer Below Here -->
