push final code

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <div class="H"></div>
                 <div class="H"></div>
                 <div class="H"></div>
+                <img src="https://img.icons8.com/material-outlined/24/000000/menu--v1.png"/>
             </ul>
         </nav>
         <div class="text-container">
@@ -85,7 +86,7 @@
       <div class="text-container">
         <h2>RECENT LAUNCH </h2>
           <h1>NROL-87 MISSION</h1>
-       <button class="button">Learn more</button>
+       <button class="button">LEARN MORE</button>
       </div>
     </div>
         
@@ -93,7 +94,7 @@
       <div class="text-container">
         <h2>COSM0-SKYMED </h2>
         <h1>second generation FM2 MISSION</h1>
-        <button class="button">Learn more</button>
+        <button class="button">LEARN MORE</button>
       </div>
     </div>
 
@@ -101,12 +102,11 @@
       <div class="text-container">
         <h2>STARSHIP TO LAND </h2>
             <h1>NASA ASTRONAUTS ON THE MOON</h1>
-        <button class="button">Learn more</button>
+        <button class="button">LEARN MORE</button>
       </div>
     </div>
     <!-- Footer Below Here -->
-   
-   
+
 
     <div class="footer">
        
